--- a/angular.json
+++ b/angular.json
@@ -92,5 +92,11 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6ae1d0cb-41e2-4759-9751-f3e3f62ca048",
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
   }
 }
